# agent-orchestrator

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Fixes-#181.patch  Fixes-#183.patch  Fixes-#184.patch  Fixes-#185.patch  Fixes-#193.patch  Fixes-#194.patch  Fixes-#270.patch  README.md  ROADMAP.md  ai_infra_strategy.md  docker-compose.prod.yml  docker-compose.split.yml  docker-compose.yml  orchestrator.yaml.example  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.claude/: agents  bookmarks.json  hooks  research-scout-findings.md  research-scout-state.json  research-scout-usage.json  scout-state.json  settings.json  skills
.claude/agents/: architect.md  code-reviewer.md  data-science  dependency-checker.md  finance  healthcare  marketing  migration-helper.md  software-engineering  team-lead.md  test-engineer.md  test-runner.md  tooling
.claude/audit-findings/: _summary.json
.claude/hooks/: post-edit-remind.sh  post-submodule-sync.sh  pre-safety-guard.sh  prompt-skill-suggest.sh
.claude/research-scout-findings/: llm-app-patterns.md  neko-sandbox.md  opencode-planning.md  prompts-library.md
.claude/skills/: analysis  code-review  commit.md  cost-optimization  create-pr.md  debug.md  deploy  doc  doc.md  docker-build  epic  feature  fetch-star-repos  fix  lint-check  refactor.md  research-scout  review-pr.md  scout  ship  simplify.md  skill-guidelines.md  test-analyze  test-runner  test.md  verify  web-research  website-dev
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/.husky/: check-docs.sh  pre-commit
.github/scripts/: codeql_autofix.py
.github/workflows/: alert-analysis.yml  audit-research-scout.yml  auto-heal.yml  auto-merge-maintenance.yml  aws-cost-audit.yml  aws-prune.yml  cli-release.yml  cli-rust.yml  codeql-autofix.yml  dead-code-audit.yml  deploy-docs.yml  deploy.yml  diagnose-monitoring.yml  ec2-disk-cleanup.yml  ec2-logs.yml  ec2-restart.yml  fetch-logs.yml  grafana-setup.yml  nightly-research.yml  security-autofix.yml  security-scan.yml  terraform.yml  uptime-check.yml
.husky/: pre-commit
analysis/: ROADMAP.md
analysis/deepflow/: 01-project-overview.md  02-architecture.md  03-tech-stack.md  04-agent-system.md  05-middleware-chain.md  06-subagent-system.md  07-tool-system.md  08-sandbox-system.md  09-skills-system.md  10-llm-integration.md  11-mcp-integration.md  12-memory-system.md  13-state-management.md  14-configuration.md  15-frontend.md  16-api-layer.md  17-streaming.md  18-im-channels.md  19-prompt-engineering.md  20-human-in-the-loop.md  21-testing.md  22-error-handling.md  23-security.md  24-docker-deployment.md  25-embedded-client.md  26-comparison.md  27-strengths.md  28-weaknesses.md  29-learnings.md  30-roadmap.md  README.md
analysis/harnessed-llm-agent/: 00-overview.md  01-harness.md  02-skills.md  03-memory.md  04-protocols.md  05-orbital-modules.md  06-match-matrix.md  07-roadmap.md
analysis/langgraph/: 00-overview.md  01-architecture.md  02-state-graph.md  03-channels.md  04-pregel-engine.md  05-pregel-loop.md  14-store.md  (+24 more)
cli/: Cargo.toml  README.md  ago  deny.toml  try-ago.sh
cli/docs/: shell-execution-redesign.md
cli/src/: auth.rs  cli.rs  client.rs  config.rs  context.rs  error.rs  instructions.rs  lib.rs  main.rs  project.rs  render.rs  state.rs
cli/src/agent_host/: allowlist.rs  client.rs  error_digest.rs  mod.rs  protocol.rs  runner.rs  sandbox.rs  signing.rs  thrash_guard.rs
cli/src/commands/: cache.rs  chat.rs  completions.rs  config.rs  jobs.rs  login.rs  logout.rs  mod.rs  print_token.rs  run.rs  self_cmd.rs  whoami.rs
cli/tests/: cli_integration.rs
docs/: README.md  abstractions.md  agent-host.md  agents.md  ago-cli-improvements.md  architecture-repair-loop.md  architecture.md  cache-strategy.md  cli.md  components.md  cooperation-protocol.md  cost-analysis.md  dashboard.md  dead-code-report.md  deployment.md  infrastructure.md  managing-local-projects.md  migration-from-claude.md  monitoring.md  observability-upgrade.md  phase0-cost-report.md  phase2.md  phase3.md  prompt-engineering.md  quickstart-features.md  roadmap.md  security.md  trace-schema.md  unified-roadmap.md
evals/: __init__.py  context_benchmark.py
examples/: test_claude_graph.py  test_ollama_graph.py  test_v02_integration.py
frontend/: .responsive-baseline.txt  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
rust/: Cargo.toml  pyproject.toml
rust/src/: graph_engine.rs  lib.rs  metrics.rs  rate_limiter.rs  router.rs  task_queue.rs  types.rs
rust/tests/: test_graph_engine.rs  test_metrics.rs  test_rate_limiter.rs  test_router.rs  test_task_queue.rs
scripts/: analyze_ago_session.py  archive_jobs.py  audit_research_scout_history.py  check_prometheus.sh  check_responsive.sh  dead_code_report.py  explain_research_scout_history.py  fetch_github_stars.py  fix_security_alerts.py  generate_architecture_map.py  generate_feature_map.py  run_research_scout.py  setup-ec2.sh  simulate_finance_team.py  typecheck.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_agent_context_cap.py  test_agent_host_client.py  test_agent_host_protocol.py  test_agent_host_server.py  test_agent_host_streaming.py  test_agent_host_telemetry.py  test_agent_runner.py  test_agents_registry.py  test_alert_webhook.py  test_analyze_ago_session.py  test_archive_jobs.py  test_audit_research_scout_history.py  test_auth.py  test_aws_cost_exporter.py  test_bookmark_tracker.py  test_cache.py  test_channels.py  test_ci_workflows.py  test_clarification.py  test_cli_device_flow.py  test_cli_device_flow_postgres.py  test_cli_routes.py  test_client.py  test_compaction_metrics.py  test_conformance.py  test_context_benchmark.py  test_conversation.py  test_cooperation.py  test_cooperation_messages.py  test_core.py  test_dashboard.py  test_db_reconnect.py  test_dependabot_config.py  test_deploy.py  test_document_converter.py  test_document_converter_heic.py  test_evals_routes.py  test_evaluator.py  test_explain_research_scout_history.py  (+72 more)
(+392 files in other folders)
