[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "1.0.0"
description = "Provider-agnostic AI agent orchestration framework"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# --- Harness layer (publishable library: core/, providers/, skills/) ---
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-generativeai>=0.8"]
postgres = ["asyncpg>=0.31.0"]
harness = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
    "asyncpg>=0.31.0",
]

# --- App layer (dashboard/, integrations/ — NOT part of library) ---
slack = ["slack-bolt>=1.28.0", "slack-sdk>=3.33"]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "websockets>=16.0", "httpx>=0.27", "authlib>=1.6.11", "PyJWT>=2.12.0", "itsdangerous>=2.1", "bcrypt>=5.0.0", "python-multipart>=0.0.20", "cryptography>=46.0.7"]
telegram = ["python-telegram-bot>=22.7"]
docs = ["pymupdf>=1.27.2.2", "openpyxl>=3.1.5", "python-docx>=1.1", "python-pptx>=1.0.2", "markdownify>=0.13"]
# Image OCR — requires the `tesseract` system binary (apt install tesseract-ocr / brew install tesseract).
images = ["pytesseract>=0.3.10", "Pillow>=10.0"]
otel = [
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-semantic-conventions>=0.49b0",
]
langfuse = ["langfuse>=2.0"]
phoenix = ["arize-phoenix-otel>=0.5"]

# --- Rust acceleration (optional — falls back to pure Python) ---
rust = ["agent-orchestrator-rust"]

# --- Combined extras ---
all = ["anthropic>=0.40", "openai>=1.50", "google-generativeai>=0.8", "asyncpg>=0.31.0", "fastapi>=0.115", "uvicorn[standard]>=0.32", "websockets>=16.0", "httpx>=0.27", "authlib>=1.6.11", "PyJWT>=2.12.0", "itsdangerous>=2.1", "bcrypt>=5.0.0", "python-multipart>=0.0.20", "cryptography>=46.0.7", "pytesseract>=0.3.10", "Pillow>=10.0", "opentelemetry-api>=1.41.1", "opentelemetry-sdk>=1.27", "opentelemetry-instrumentation-fastapi>=0.48b0", "opentelemetry-instrumentation-httpx>=0.48b0", "opentelemetry-exporter-otlp-proto-http>=1.41.0", "opentelemetry-semantic-conventions>=0.49b0", "langfuse>=2.0", "arize-phoenix-otel>=0.5"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8",
    "vulture>=2.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
