[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-orchestrator"
version = "1.0.0"
description = "Provider-agnostic AI agent orchestration framework"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.3"]

[project.optional-dependencies]
# --- Harness layer (publishable library: core/, providers/, skills/) ---
anthropic = ["anthropic>=0.113.0"]
openai = ["openai>=2.41.1"]
google = ["google-generativeai>=0.8.6"]
postgres = ["asyncpg>=0.31.0"]
harness = [
    "anthropic>=0.113.0",
    "openai>=2.41.1",
    "google-generativeai>=0.8.6",
    "asyncpg>=0.31.0",
]

# --- App layer (dashboard/, integrations/ — NOT part of library) ---
slack = ["slack-bolt>=1.28.0", "slack-sdk>=3.42.0"]
dashboard = ["fastapi>=0.138.0", "uvicorn[standard]>=0.49.0", "websockets>=16.0", "httpx>=0.28.1", "authlib>=1.7.2", "PyJWT>=2.13.0", "itsdangerous>=2.2.0", "bcrypt>=5.0.0", "python-multipart>=0.0.31", "cryptography>=48.0.0"]
telegram = ["python-telegram-bot>=22.8"]
docs = ["pymupdf>=1.27.2.3", "openpyxl>=3.1.5", "python-docx>=1.2.0", "python-pptx>=1.0.2", "markdownify>=1.2.2"]
# Image OCR — requires the `tesseract` system binary (apt install tesseract-ocr / brew install tesseract).
images = ["pytesseract>=0.3.13", "Pillow>=10.0"]
otel = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.0",
    "opentelemetry-semantic-conventions>=0.63b1",
]
langfuse = ["langfuse>=4.13.0"]
phoenix = ["arize-phoenix-otel>=0.16.1"]

# --- Rust acceleration (optional — falls back to pure Python) ---
rust = ["agent-orchestrator-rust"]

# --- Combined extras ---
all = ["anthropic>=0.113.0", "openai>=2.41.1", "google-generativeai>=0.8.6", "asyncpg>=0.31.0", "fastapi>=0.138.0", "uvicorn[standard]>=0.49.0", "websockets>=16.0", "httpx>=0.28.1", "authlib>=1.7.2", "PyJWT>=2.13.0", "itsdangerous>=2.2.0", "bcrypt>=5.0.0", "python-multipart>=0.0.31", "cryptography>=48.0.0", "pytesseract>=0.3.13", "Pillow>=10.0", "opentelemetry-api>=1.42.1", "opentelemetry-sdk>=1.42.1", "opentelemetry-instrumentation-fastapi>=0.64b0", "opentelemetry-instrumentation-httpx>=0.63b1", "opentelemetry-exporter-otlp-proto-http>=1.42.0", "opentelemetry-semantic-conventions>=0.63b1", "langfuse>=4.13.0", "arize-phoenix-otel>=0.16.1"]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "vulture>=2.16",
    # Static type checker — same engine as the editor's Pylance, so CLI/CI/editor
    # agree. Gate is incremental (changed files), see scripts/typecheck.sh.
    "pyright>=1.1.410",
    # Used only by the AWS cost-exporter / job-archiver (which install it in
    # their own containers); needed in dev so their tests can import them.
    "boto3>=1.43.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits a real external service (LLM, GitHub API, etc.). Skipped by default; opt-in via `pytest -m live` plus the relevant env vars.",
]

[tool.ruff]
line-length = 100
target-version = "py311"
